Package_Tools/include-C/harfbuzz/in_arbeit/fertig/hb_unicode.pp


function hb_unicode_funcs_get_default:Phb_unicode_funcs_t;cdecl;external;
function hb_unicode_funcs_create(parent:Phb_unicode_funcs_t):Phb_unicode_funcs_t;cdecl;external;
function hb_unicode_funcs_get_empty:Phb_unicode_funcs_t;cdecl;external;
function hb_unicode_funcs_reference(ufuncs:Phb_unicode_funcs_t):Phb_unicode_funcs_t;cdecl;external;
procedure hb_unicode_funcs_destroy(ufuncs:Phb_unicode_funcs_t);cdecl;external;
function hb_unicode_funcs_set_user_data(ufuncs:Phb_unicode_funcs_t; key:Phb_user_data_key_t; data:pointer; destroy:Thb_destroy_func_t; replace:Thb_bool_t):Thb_bool_t;cdecl;external;
(* Const before type ignored *)
function hb_unicode_funcs_get_user_data(ufuncs:Phb_unicode_funcs_t; key:Phb_user_data_key_t):pointer;cdecl;external;
procedure hb_unicode_funcs_make_immutable(ufuncs:Phb_unicode_funcs_t);cdecl;external;
function hb_unicode_funcs_is_immutable(ufuncs:Phb_unicode_funcs_t):Thb_bool_t;cdecl;external;
function hb_unicode_funcs_get_parent(ufuncs:Phb_unicode_funcs_t):Phb_unicode_funcs_t;cdecl;external;
{
 * funcs
  }
{ typedefs  }
{*
 * hb_unicode_combining_class_func_t:
 * @ufuncs: A Unicode-functions structure
 * @unicode: The code point to query
 * @user_data: User data pointer passed by the caller
 *
 * A virtual method for the #hb_unicode_funcs_t structure.
 *
 * This method should retrieve the Canonical Combining Class (ccc)
 * property for a specified Unicode code point. 
 *
 * Return value: The #hb_unicode_combining_class_t of @unicode
 * 
 * }
type

  Thb_unicode_combining_class_func_t = function (ufuncs:Phb_unicode_funcs_t; unicode:Thb_codepoint_t; user_data:pointer):Thb_unicode_combining_class_t;cdecl;
{*
 * hb_unicode_general_category_func_t:
 * @ufuncs: A Unicode-functions structure
 * @unicode: The code point to query
 * @user_data: User data pointer passed by the caller
 *
 * A virtual method for the #hb_unicode_funcs_t structure.
 *
 * This method should retrieve the General Category property for
 * a specified Unicode code point.
 * 
 * Return value: The #hb_unicode_general_category_t of @unicode
 *
 * }

  Thb_unicode_general_category_func_t = function (ufuncs:Phb_unicode_funcs_t; unicode:Thb_codepoint_t; user_data:pointer):Thb_unicode_general_category_t;cdecl;
{*
 * hb_unicode_mirroring_func_t:
 * @ufuncs: A Unicode-functions structure
 * @unicode: The code point to query
 * @user_data: User data pointer passed by the caller
 *
 * A virtual method for the #hb_unicode_funcs_t structure.
 *
 * This method should retrieve the Bi-Directional Mirroring Glyph
 * code point for a specified Unicode code point.
 *
 * <note>Note: If a code point does not have a specified
 * Bi-Directional Mirroring Glyph defined, the method should
 * return the original code point.</note>
 * 
 * Return value: The #hb_codepoint_t of the Mirroring Glyph for @unicode
 *
 * }

  Thb_unicode_mirroring_func_t = function (ufuncs:Phb_unicode_funcs_t; unicode:Thb_codepoint_t; user_data:pointer):Thb_codepoint_t;cdecl;
{*
 * hb_unicode_script_func_t:
 * @ufuncs: A Unicode-functions structure
 * @unicode: The code point to query
 * @user_data: User data pointer passed by the caller
 *
 * A virtual method for the #hb_unicode_funcs_t structure.
 *
 * This method should retrieve the Script property for a 
 * specified Unicode code point.
 *
 * Return value: The #hb_script_t of @unicode
 * 
 * }

  Thb_unicode_script_func_t = function (ufuncs:Phb_unicode_funcs_t; unicode:Thb_codepoint_t; user_data:pointer):Thb_script_t;cdecl;
{*
 * hb_unicode_compose_func_t:
 * @ufuncs: A Unicode-functions structure
 * @a: The first code point to compose
 * @b: The second code point to compose
 * @ab: (out): The composed code point
 * @user_data: user data pointer passed by the caller
 *
 * A virtual method for the #hb_unicode_funcs_t structure.
 *
 * This method should compose a sequence of two input Unicode code
 * points by canonical equivalence, returning the composed code
 * point in a #hb_codepoint_t output parameter (if successful).
 * The method must return an #hb_bool_t indicating the success
 * of the composition.
 * 
 * Return value: `true` is @a,@b composed, `false` otherwise
 *
 * }

  Thb_unicode_compose_func_t = function (ufuncs:Phb_unicode_funcs_t; a:Thb_codepoint_t; b:Thb_codepoint_t; ab:Phb_codepoint_t; user_data:pointer):Thb_bool_t;cdecl;
{*
 * hb_unicode_decompose_func_t:
 * @ufuncs: A Unicode-functions structure
 * @ab: The code point to decompose
 * @a: (out): The first decomposed code point
 * @b: (out): The second decomposed code point
 * @user_data: user data pointer passed by the caller
 *
 * A virtual method for the #hb_unicode_funcs_t structure.
 *
 * This method should decompose an input Unicode code point,
 * returning the two decomposed code points in #hb_codepoint_t
 * output parameters (if successful). The method must return an
 * #hb_bool_t indicating the success of the composition.
 * 
 * Return value: `true` if @ab decomposed, `false` otherwise
 *
 * }

  Thb_unicode_decompose_func_t = function (ufuncs:Phb_unicode_funcs_t; ab:Thb_codepoint_t; a:Phb_codepoint_t; b:Phb_codepoint_t; user_data:pointer):Thb_bool_t;cdecl;
{ func setters  }
{*
 * hb_unicode_funcs_set_combining_class_func:
 * @ufuncs: A Unicode-functions structure
 * @func: (closure user_data) (destroy destroy) (scope notified): The callback function to assign
 * @user_data: Data to pass to @func
 * @destroy: (nullable): The function to call when @user_data is not needed anymore
 *
 * Sets the implementation function for #hb_unicode_combining_class_func_t.
 *
 * Since: 0.9.2
 * }

procedure hb_unicode_funcs_set_combining_class_func(ufuncs:Phb_unicode_funcs_t; func:Thb_unicode_combining_class_func_t; user_data:pointer; destroy:Thb_destroy_func_t);cdecl;external;
{*
 * hb_unicode_funcs_set_general_category_func:
 * @ufuncs: A Unicode-functions structure
 * @func: (closure user_data) (destroy destroy) (scope notified): The callback function to assign
 * @user_data: Data to pass to @func
 * @destroy: (nullable): The function to call when @user_data is not needed anymore
 *
 * Sets the implementation function for #hb_unicode_general_category_func_t.
 *
 * Since: 0.9.2
 * }
procedure hb_unicode_funcs_set_general_category_func(ufuncs:Phb_unicode_funcs_t; func:Thb_unicode_general_category_func_t; user_data:pointer; destroy:Thb_destroy_func_t);cdecl;external;
{*
 * hb_unicode_funcs_set_mirroring_func:
 * @ufuncs: A Unicode-functions structure
 * @func: (closure user_data) (destroy destroy) (scope notified): The callback function to assign
 * @user_data: Data to pass to @func
 * @destroy: (nullable): The function to call when @user_data is not needed anymore
 *
 * Sets the implementation function for #hb_unicode_mirroring_func_t.
 *
 * Since: 0.9.2
 * }
procedure hb_unicode_funcs_set_mirroring_func(ufuncs:Phb_unicode_funcs_t; func:Thb_unicode_mirroring_func_t; user_data:pointer; destroy:Thb_destroy_func_t);cdecl;external;
{*
 * hb_unicode_funcs_set_script_func:
 * @ufuncs: A Unicode-functions structure
 * @func: (closure user_data) (destroy destroy) (scope notified): The callback function to assign
 * @user_data: Data to pass to @func
 * @destroy: (nullable): The function to call when @user_data is not needed anymore
 *
 * Sets the implementation function for #hb_unicode_script_func_t.
 *
 * Since: 0.9.2
 * }
procedure hb_unicode_funcs_set_script_func(ufuncs:Phb_unicode_funcs_t; func:Thb_unicode_script_func_t; user_data:pointer; destroy:Thb_destroy_func_t);cdecl;external;
{*
 * hb_unicode_funcs_set_compose_func:
 * @ufuncs: A Unicode-functions structure
 * @func: (closure user_data) (destroy destroy) (scope notified): The callback function to assign
 * @user_data: Data to pass to @func
 * @destroy: (nullable): The function to call when @user_data is not needed anymore
 *
 * Sets the implementation function for #hb_unicode_compose_func_t.
 *
 * Since: 0.9.2
 * }
procedure hb_unicode_funcs_set_compose_func(ufuncs:Phb_unicode_funcs_t; func:Thb_unicode_compose_func_t; user_data:pointer; destroy:Thb_destroy_func_t);cdecl;external;
{*
 * hb_unicode_funcs_set_decompose_func:
 * @ufuncs: A Unicode-functions structure
 * @func: (closure user_data) (destroy destroy) (scope notified): The callback function to assign
 * @user_data: Data to pass to @func
 * @destroy: (nullable): The function to call when @user_data is not needed anymore
 *
 * Sets the implementation function for #hb_unicode_decompose_func_t.
 *
 * Since: 0.9.2
 * }
procedure hb_unicode_funcs_set_decompose_func(ufuncs:Phb_unicode_funcs_t; func:Thb_unicode_decompose_func_t; user_data:pointer; destroy:Thb_destroy_func_t);cdecl;external;
{ accessors  }
{*
 * hb_unicode_combining_class:
 * @ufuncs: The Unicode-functions structure
 * @unicode: The code point to query
 *
 * Retrieves the Canonical Combining Class (ccc) property
 * of code point @unicode.
 *
 * Return value: The #hb_unicode_combining_class_t of @unicode
 *
 * Since: 0.9.2
 * }
function hb_unicode_combining_class(ufuncs:Phb_unicode_funcs_t; unicode:Thb_codepoint_t):Thb_unicode_combining_class_t;cdecl;external;
{*
 * hb_unicode_general_category:
 * @ufuncs: The Unicode-functions structure
 * @unicode: The code point to query
 *
 * Retrieves the General Category (gc) property
 * of code point @unicode.
 *
 * Return value: The #hb_unicode_general_category_t of @unicode
 *
 * Since: 0.9.2
 * }
function hb_unicode_general_category(ufuncs:Phb_unicode_funcs_t; unicode:Thb_codepoint_t):Thb_unicode_general_category_t;cdecl;external;
{*
 * hb_unicode_mirroring:
 * @ufuncs: The Unicode-functions structure
 * @unicode: The code point to query
 *
 * Retrieves the Bi-directional Mirroring Glyph code
 * point defined for code point @unicode.
 *
 * Return value: The #hb_codepoint_t of the Mirroring Glyph for @unicode
 *
 * Since: 0.9.2
 * }
function hb_unicode_mirroring(ufuncs:Phb_unicode_funcs_t; unicode:Thb_codepoint_t):Thb_codepoint_t;cdecl;external;
{*
 * hb_unicode_script:
 * @ufuncs: The Unicode-functions structure
 * @unicode: The code point to query
 *
 * Retrieves the #hb_script_t script to which code
 * point @unicode belongs.
 *
 * Return value: The #hb_script_t of @unicode
 *
 * Since: 0.9.2
 * }
function hb_unicode_script(ufuncs:Phb_unicode_funcs_t; unicode:Thb_codepoint_t):Thb_script_t;cdecl;external;
function hb_unicode_compose(ufuncs:Phb_unicode_funcs_t; a:Thb_codepoint_t; b:Thb_codepoint_t; ab:Phb_codepoint_t):Thb_bool_t;cdecl;external;
function hb_unicode_decompose(ufuncs:Phb_unicode_funcs_t; ab:Thb_codepoint_t; a:Phb_codepoint_t; b:Phb_codepoint_t):Thb_bool_t;cdecl;external;
{$endif}
{ HB_UNICODE_H  }

implementation


end.
